[FIX] web_editor: wrong position of checkbox
Before Commit:

On switching the checkbox direction from left to right and pressing tab,
the checkbox would shift to the left while the text appeared on the right,
and vice versa for RTL languages.

After Commit:

Commit [1] added the positioning of checklists in Right-to-Left (RTL) languages.
Previously, only the direct child li elements of ul were styled because of
the use of the child combinator selector (>), as the dir attribute was only
applied to the outermost ul element. This commit ensures uniform styling
across various languages, including RTL languages.

[1]: bb9c4b3892353901a2cf33bccf0d6324466fd1fa

task-3828737

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -161,10 +161,12 @@ ul.o_checklist {
         }
     }
 }
-ul.o_checklist[dir="rtl"] > li:not(.oe-nested)::before {
-    left: auto;
-    right: - $o-checklist-margin-left;
-    text-align: right;
+ul.o_checklist[dir="rtl"], ul.o_checklist[dir="ltr"] {
+    li:not(.oe-nested)::before {
+        left: auto;
+        right: - $o-checklist-margin-left;
+        text-align: right;
+    }
 }
 ol > li.o_indent, ul > li.o_indent {
     margin-left: 0;
